tests/analyzer/errors/break.ray
fn main() {
    {
        break 4
    }

    :b {
        break :b 5
    }
}
